--- a/script.tvguide/resources/language/English/strings.po
+++ b/script.tvguide/resources/language/English/strings.po
@@ -53,7 +53,7 @@ msgid "Cancel"
 msgstr ""
 
 msgctxt "#30009"
-msgid “Channel info not available"
+msgid "Channel info not available"
 msgstr ""
 
 #empty strings from id 30010 to 30099
