--- a/zips/script.tvguide/changelog.txt
+++ b/zips/script.tvguide/changelog.txt
@@ -1,3 +1,6 @@
+12.2
+Changed Epg data source back to google (Dropbox banned my account due to excessive downloads) oops!
+
 12.0
 Changed epg data source from google to dropbox (more stable)
 
