--- a/zips/script.tvguide/changelog.txt
+++ b/zips/script.tvguide/changelog.txt
@@ -1,3 +1,6 @@
+12.7
+Update guide url again!
+
 12.3
 Apparently google are discontinuing the host side of google drive so i have change the EPG source again.
 
